# public_rshpn_tool

./: README.md  readme.txt
gazebo_lwr4_simulator/scripts/: compile.sh  test.sh
gazebo_lwr4_simulator/src/: readme.txt
gazebo_lwr4_simulator/src/gazebo_kuka_lwr/: CMakeLists.txt  README.md  package.xml  readme.txt
gazebo_lwr4_simulator/src/gazebo_kuka_lwr/gazebo/models/kuka_lwr/: model.config  model.sdf
gazebo_lwr4_simulator/src/gazebo_kuka_lwr/lwr4_kinematics_dynamics (kopia)/: CMakeLists.txt  lwr4_kinematics_dynamics.cpp  lwr4_kinematics_dynamics.h  main.cpp
gazebo_lwr4_simulator/src/gazebo_kuka_lwr/msgs/: CMakeLists.txt  kuka_joints.proto
gazebo_lwr4_simulator/src/gazebo_kuka_lwr/shared_memory (kopia)/: CMakeLists.txt  consumer.cpp  main.cpp  producer.cpp  shared_memory.cpp  shared_memory.h
gazebo_lwr4_simulator/src/gazebo_kuka_lwr/src/: kuka_lwr_plugin.cpp  kuka_lwr_plugin050118.cpp  kuka_lwr_plugin_030119.cpp  kuka_lwr_plugin_060118.cpp  kuka_lwr_plugin_080119.cpp  kuka_lwr_plugin_100119.cpp  kuka_lwr_plugin_100919.cpp  kuka_lwr_plugin_ros.cpp  readme.txt
generated_python_code/ball_collector/audio/: CMakeLists.txt  package.xml
generated_python_code/ball_collector/audio/launch/: audio.launch  audio_verbose.launch
generated_python_code/ball_collector/audio/scripts/: auxiliary_agent_audio.py  auxiliary_subsystem_cs.py  auxiliary_subsystem_loudspeaker.py  auxiliary_subsystem_mic.py  subsystem_cs.py  subsystem_loudspeaker.py  subsystem_mic.py
generated_python_code/ball_collector/autonomous/: CMakeLists.txt  package.xml
generated_python_code/ball_collector/autonomous/launch/: autonomous.launch  autonomous_verbose.launch
generated_python_code/ball_collector/autonomous/msg/: ObstacleDetected.msg  SensorMessage.msg
generated_python_code/ball_collector/autonomous/scripts/: auxiliary_agent_autonomous.py  auxiliary_subsystem_cs.py  subsystem_cs.py
generated_python_code/ball_collector/ballcollector/: CMakeLists.txt  package.xml
generated_python_code/ball_collector/ballcollector/launch/: ballcollector.launch  ballcollector_verbose.launch
generated_python_code/ball_collector/ballcollector/msg/: CameraMessage.msg  maksym.msg
generated_python_code/ball_collector/ballcollector/scripts/: auxiliary_agent_ballcollector.py  auxiliary_subsystem_camera.py  auxiliary_subsystem_motor.py  auxiliary_subsystem_sensors.py  auxiliary_subsystem_vacuum.py  subsystem_camera.py  subsystem_cs.py  subsystem_motor.py  subsystem_sensors.py  subsystem_vacuum.py
generated_python_code/ball_collector/img_processing/: CMakeLists.txt  package.xml
generated_python_code/ball_collector/img_processing/launch/: img_processing.launch  img_processing_verbose.launch
generated_python_code/ball_collector/img_processing/msg/: DetectedBall.msg
generated_python_code/ball_collector/img_processing/scripts/: auxiliary_agent_img_processing.py  auxiliary_functions.py  auxiliary_subsystem_cs.py  subsystem_cs.py
generated_python_code/ball_collector/supervisor/: CMakeLists.txt  package.xml
generated_python_code/ball_collector/supervisor/launch/: supervisor.launch  supervisor_verbose.launch
generated_python_code/ball_collector/supervisor/scripts/: auxiliary_agent_supervisor.py  auxiliary_subsystem_cs.py  subsystem_cs.py
generated_python_code/ball_collector/teleoperated/: CMakeLists.txt  package.xml
generated_python_code/ball_collector/teleoperated/launch/: teleoperated.launch  teleoperated_verbose.launch
generated_python_code/ball_collector/teleoperated/msg/: MotorMessage.msg
generated_python_code/ball_collector/teleoperated/scripts/: auxiliary_agent_teleoperated.py  auxiliary_subsystem_cs.py  subsystem_cs.py
generated_python_code/velma_ball_transfer/agent/: CMakeLists.txt
generated_python_code/velma_ball_transfer/agent/launch/: agent.launch  agent_verbose.launch
generated_python_code/velma_ball_transfer/agent/scripts/: auxiliary_agent_agent.py  auxiliary_functions.py  auxiliary_subsystem_cs.py  subsystem_cs.py
generated_ros_lwr4/scripts/: runAll.sh  runRQTGraph.sh
generated_ros_lwr4/src/agent/: CMakeLists.txt
generated_ros_lwr4/src/agent/src/: cs.cpp
my_libs/lwr4_kinematics_dynamics/: CMakeLists.txt  lwr4_kinematics_dynamics.cpp  lwr4_kinematics_dynamics.h  main.cpp
my_libs/shared_memory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  consumer.cpp  main.cpp  producer.cpp  shared_memory.cpp  shared_memory.h
scripts/: compileHPNTool.sh  runHPNTool.sh
